objects/Country__c.object
<CustomObject>
    <fields>
        <fullName>CURRENCY_CODE__c</fullName>
        <label>CURRENCY CODE</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipName>Countries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Long_Name__c</fullName>
        <label>Long Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Display of the countries in list</description>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <label>Short Name</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>BLN Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Long_Name__c</columns>
        <columns>Short_Name__c</columns>
        <columns>Currency__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>